Move static div element to html/css

--- a/snake.html
+++ b/snake.html
@@ -13,6 +13,7 @@
       <div id='navigation'>
         <p>Use the arrow keys to start and navigate and the space bar to pause/continue.</p>
         <div id='lost-container'>
+          <div id="lost">Sorry, but you lost!</div>
           <button id='retry'>Retry</button>
       </div>
       </div>
