--- a/snake.html
+++ b/snake.html
@@ -8,7 +8,26 @@
 
   <body>
     <div id='global-container'>
-      <div id='container'>
+      <div id='settings-container'>
+        <div id='playing-field-settings'>
+          <label for=grid-size-x-range>Grid size horizontically: </label>
+          <span id='grid-size-x-text'>12</span>
+          <input type="range" id="grid-size-x-range" data-textfield="#grid-size-x-text" min="5" max="20" value="12">
+          <label for=grid-size-y-range>Grid size vertically: </label>
+          <span id='grid-size-y-text'>10</span>
+          <input type="range" id="grid-size-y-range" data-textfield="#grid-size-y-text" min="5" max="20" value="10">
+          <label for=block-size-range>Block size: </label>
+          <span id='block-size-text'>60</span><span>px</span>
+          <input type="range" id="block-size-range" data-textfield="#block-size-text" min="10" max="100" value="60" step="10">
+        </div>
+        <label for=speed-range>Speed: </label>
+        <span id='speed-text'>1</span><span>x</span>
+        <input type="range" id="speed-range" data-textfield="#speed-text" min="-5" max="5" value="0">
+      </div>
+
+      <div id='playing-field-container'>
+        <div id='playing-field'>
+        </div>
       </div>
       <div id='navigation'>
         <p>Use the arrow keys to start and navigate and the space bar to pause/continue.</p>
