Restructures the lost container

--- a/snake.html
+++ b/snake.html
@@ -32,8 +32,7 @@
       <div id='navigation'>
         <p>Use the arrow keys to start and navigate and the space bar to pause/continue.</p>
         <div id='lost-container'>
-          <div id="lost">Sorry, but you lost!</div>
-          <button id='retry'>Retry</button>
+          <div id="lost">Sorry, but you lost! <br> Hit Enter to restart or click here: <button id='retry'>Retry</button> </div>
       </div>
       </div>
 </div>
