--- a/snake.html
+++ b/snake.html
@@ -43,6 +43,10 @@
         </div>
       </div>
       <div id='output'>
+        <div>
+          <h3>Score</h3>
+          <p id='score'>0</<p>
+        </div>
         <div id='lost-container'>
           <div id="lost">Sorry, but you lost! <br> Hit Enter to restart or click here: <button id='retry'>Retry</button> </div>
       </div>
